@@ -5,7 +5,7 @@
 	<background>
 		<area x="0" y="75%" width="100%" height="25%" layer="1">
 			<drawimage condition="not{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientChannel"/>
-			<drawimage condition="{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientChannelBright"/>           
+			<drawimage condition="{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientChannelBright"/>
 		</area>
 		<area x="0" y="75%" width="100%" height="25%" layer="2">
 			<drawimage x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsChannel"/>
@@ -14,7 +14,7 @@
 
 	<channelinfo>
 		<area x="1%" y="95%" width="15%" height="4%" layer="3">
-			<drawtext  x="0" y="12" valign="center" align="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{channelnumber} - {channelname}" />
+			<drawtext x="0" y="12" valign="center" align="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{channelnumber} - {channelname}" />
 		</area>
 		<area x="1%" y="78%" width="15%" height="15%" layer="3">
 			<drawimage cache="true" condition="{channellogoexists}" imagetype="channellogo" path="{channelid}" width="80%" height="80%" align="center" valign="center" />
@@ -26,12 +26,12 @@
 			<drawtext x="0" valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{currentstart} - {currentstop}"/>
 		</area>
 <!--single-line display-->
-		<area condition="not{twoLineDisplay}" x="31%" y="77%" width="54%" height="7%" layer="3">
+		<area condition="not{twoLineDisplay}" x="31%" y="77%" width="53%" height="7%" layer="3">
 			<drawtext condition="isset{currentsubtitle}" x="0" y="0" valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{currenttitle} - {currentsubtitle}"/>
 			<drawtext condition="empty{currentsubtitle}" x="0" y="0" valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{currenttitle}"/>
 		</area>
 <!--two-line display-->
-		<area condition="{twoLineDisplay}" x="31%" y="77%" width="54%" height="7%" layer="3">
+		<area condition="{twoLineDisplay}" x="31%" y="77%" width="53%" height="7%" layer="3">
 			<drawtext condition="isset{currentsubtitle}" x="0" y="0" font="{light}" fontsize="53%" color="{clrLightGray}" text="{currenttitle}"/>
 			<drawtext condition="isset{currentsubtitle}" x="0" y="55%" font="{light}" fontsize="40%" color="{clrLightGray}" text="{currentsubtitle}"/>
 			<drawtext condition="empty{currentsubtitle}" x="0" y="0" valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{currenttitle}"/>
@@ -44,15 +44,15 @@
 			<drawtext x="0" y="10%" valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{nextstart} - {nextstop}"/>
 		</area>
 <!--single-line display-->
-		<area condition="not{twoLineDisplay}" x="31%" y="87%" width="54%" height="7%" layer="3">
+		<area condition="not{twoLineDisplay}" x="31%" y="87%" width="53%" height="7%" layer="3">
 			<drawtext condition="isset{nextsubtitle}" x="0" y="10%" valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{nexttitle} - {nextsubtitle}"/>
 			<drawtext condition="empty{nextsubtitle}" x="0" y="10%" font="{light}" fontsize="65%" color="{clrLightGray}" text="{nexttitle}"/>
 		</area>
 <!--two-line display-->
-		<area condition="{twoLineDisplay}" x="31%" y="87%" width="54%" height="7%" layer="3">
+		<area condition="{twoLineDisplay}" x="31%" y="87%" width="53%" height="7%" layer="3">
 			<drawtext condition="empty{nextsubtitle}" x="0" y="10%" valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{nexttitle}"/>
 			<drawtext condition="isset{nextsubtitle}" x="0" y="10%" font="{light}" fontsize="53%" color="{clrLightGray}" text="{nexttitle}"/>
-			<drawtext condition="isset{nextsubtitle}" x="0" y="65%"  font="{light}" fontsize="40%" color="{clrLightGray}" text="{nextsubtitle}"/>
+			<drawtext condition="isset{nextsubtitle}" x="0" y="65%" font="{light}" fontsize="40%" color="{clrLightGray}" text="{nextsubtitle}"/>
 		</area>
 		<area x="85%" y="87%" width="13%" height="7%" layer="3">
 			<drawtext align="right" y="10%" font="{light}" fontsize="50%" color="{clrLightGray}" text="{nextduration} min" />
@@ -62,7 +62,7 @@
 	<progressbar>
 		<area x="18%" y="85%" width="68%" height="1%" layer="3">
 			<!--<drawrectangle x="0" y="2" width="{elapsed}/{duration}*{areawidth}" height="{areaheight}*0.2" color="{clrHigh}" />-->
-			<drawimage   x="0" y="0" width="{elapsed}/{duration}*{areawidth}" height="{areaheight}*0.6" imagetype="skinpart" path="timeBar" />
+			<drawimage x="0" y="0" width="{elapsed}/{duration}*{areawidth}" height="{areaheight}*0.6" imagetype="skinpart" path="timeBar" />
 		</area>
 	</progressbar>
 
@@ -82,8 +82,8 @@
 		
 		<area x="52%" y="95%" width="11%" height="4%" layer="3">
 			<drawtext condition="gt({ecmtime}, 0)++{ecmInside}" x="0" y="0" valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="ECM: {ecmtime}ms" />
-        </area>
-    </ecminfo>
+		</area>
+	</ecminfo>
 
 	<signalqualityback>
 	</signalqualityback>
@@ -97,29 +97,29 @@
 	</screenresolution>
 
 	<statusinfo>
-		<area x="18%" y="95%" width="7%" height="4%" layer="3">     
-			<drawtext condition="{isDolby}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="DOLBY" />
-			<drawtext condition="not{isDolby}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="65%" color="{clrDarkGray}" text="DOLBY"/>
+		<area x="18%" y="95%" width="7%" height="4%" layer="3">
+			<drawtext condition="{isDolby}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="DOLBY" />
+			<drawtext condition="not{isDolby}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="65%" color="{clrDarkGray}" text="DOLBY"/>
 		</area>
-		<area x="25%" y="95%" width="8%" height="4%" layer="3">     
-			<drawtext condition="{isStereo}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="STEREO" />
-			<drawtext condition="not{isStereo}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="65%" color="{clrDarkGray}" text="STEREO"/>
-		</area>             
-		<area x="32%" y="95%" width="9%" height="4%" layer="3">     
-			<drawtext condition="{isRadio}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="RADIO" />
-			<drawtext condition="not{isRadio}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="65%" color="{clrDarkGray}" text="RADIO"/>
+		<area x="25%" y="95%" width="8%" height="4%" layer="3">
+			<drawtext condition="{isStereo}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="STEREO" />
+			<drawtext condition="not{isStereo}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="65%" color="{clrDarkGray}" text="STEREO"/>
+		</area>
+		<area x="32%" y="95%" width="9%" height="4%" layer="3">
+			<drawtext condition="{isRadio}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="RADIO" />
+			<drawtext condition="not{isRadio}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="65%" color="{clrDarkGray}" text="RADIO"/>
 		</area>
 		<area x="52%" y="95%" width="11%" height="4%" layer="3">
 			<drawtext condition="{isEncrypted}++not{ecmInside}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="ENCRYPTED"/>
-			<drawtext condition="not{isEncrypted}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="Free to Air"/>
+			<drawtext condition="not{isEncrypted}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="Free to Air"/>
 		</area>
 		<area x="71%" y="95%" width="7%" height="4%" layer="3">     
-			<drawtext condition="{hasVT}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="VTX" />
-			<drawtext condition="not{hasVT}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="65%" color="{clrDarkGray}" text="VTX"/>
-		</area>      
-		<area x="78%" y="95%" width="9%" height="4%" layer="3">     
-			<drawtext condition="{isRecording}" x="0" y="0" animtype="blink" animfreq="1000" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="65%" color="{clrRed}" text="REC" />
-			<drawtext condition="not{isRecording}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="65%" color="{clrDarkGray}" text="REC"/>
+			<drawtext condition="{hasVT}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="VTX" />
+			<drawtext condition="not{hasVT}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="65%" color="{clrDarkGray}" text="VTX"/>
+		</area>
+		<area x="78%" y="95%" width="9%" height="4%" layer="3">
+			<drawtext condition="{isRecording}" x="0" y="0" animtype="blink" animfreq="1000" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="65%" color="{clrRed}" text="REC" />
+			<drawtext condition="not{isRecording}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="65%" color="{clrDarkGray}" text="REC"/>
 		</area>
 	</statusinfo>
 
@@ -134,7 +134,7 @@
 			<drawtext x="0" width="30%" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{prevgroup}" />
 			<drawtext x="30%" width="40%" valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="{group}" />
 			<drawtext x="70%" align="right" width="30%" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{nextgroup}" />
-		</area>             
+		</area>
 	</channelgroup>
 
 	<devices>
@@ -142,7 +142,7 @@
 
 	<scrapercontent shifttime="{01_ShifttimeChannelDisplay}" shifttype="left" shiftmode="slowed">
 		<area condition="{isbanner}" x="1%" y="2%" width="{areaheight}*0.13*{mediawidth}/{mediaheight}" height="13%" layer="2">
-			<drawimage imagetype="image" path="{mediapath}" align="center" valign="center"  width="{areawidth}" height="{areaheight}"/>
+			<drawimage imagetype="image" path="{mediapath}" align="center" valign="center" width="{areawidth}" height="{areaheight}"/>
 		</area>
 		<area condition="not{isbanner}" x="1%" y="2%" width="{areaheight}*0.5*{mediawidth}/{mediaheight}" height="50%" layer="2">
 			<drawimage imagetype="image" path="{mediapath}" x="0" y="0" width="{areawidth}" height="{areaheight}"/>
