@@ -9,7 +9,7 @@
 			<drawimage x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsMenuTVLB" />
 		</area>
 		<area condition="eq({00_numRecordingsmenuitems}, 4)" x="0" y="0" width="100%" height="100%" layer="2">
-			<drawimage x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsMenuDefault" />           
+			<drawimage x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsMenuDefault" />
 		</area>
 		<area x="0" y="0" width="100%" height="11%" layer="2">
 			<drawimage x="0" width="{areawidth}*0.972" height="{areaheight}*0.972" imagetype="skinpart" path="gradientHeader" />
@@ -23,8 +23,8 @@
 				<drawimage condition="{current}++eq({coloredButtons}, 0)" x="4%" y="0" width="{areawidth}*0.96" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuActiveTVG"/>
 				<drawimage condition="{current}++eq({coloredButtons}, 2)" x="4%" y="0" width="{areawidth}*0.96" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuActiveTVG_Gradient"/>
 				<drawimage condition="{current}++eq({coloredButtons}, 1)" x="4%" y="0" width="{areawidth}*0.96" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuActiveTVG_Color"/>
-				<drawimage condition="not{folder}++{coloredElapsed}++{01_seenProgress}" x="47" y="{areaheight}-3" width="{areawidth}*{percentseen}/100" height="{areaheight}/20" imagetype="skinpart" path="elapsedBar" />
-				<drawimage condition="not{folder}++not{coloredElapsed}++{01_seenProgress}" x="47" y="{areaheight}-3" width="{areawidth}*{percentseen}/100" height="{areaheight}/20" imagetype="skinpart" path="elapsedBarMono" />
+				<drawimage condition="not{folder}++{coloredElapsed}++{01_seenProgress}" x="47" y="{areaheight}-3" width="{areawidth}*0.939*{percentseen}/100" height="{areaheight}/20" imagetype="skinpart" path="elapsedBar" />
+				<drawimage condition="not{folder}++not{coloredElapsed}++{01_seenProgress}" x="47" y="{areaheight}-3" width="{areawidth}*0.939*{percentseen}/100" height="{areaheight}/20" imagetype="skinpart" path="elapsedBarMono" />
 			</area>
 			<area condition="not{folder}++gt({00_numRecordingsmenuitems}, 4)" x="41%" width="7%" layer="3">
 				<drawtext x="5%" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{printf('%02d.%02d.%d', daynumeric, month, year)}" />
@@ -109,8 +109,8 @@
 				<drawimage condition="{current}++eq({coloredButtons},0)" x="4%" y="0" width="{areawidth}*0.96" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuActiveTVG"/>
 				<drawimage condition="{current}++eq({coloredButtons}, 2)" x="4%" y="0" width="{areawidth}*0.96" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuActiveTVG_Gradient"/>
 				<drawimage condition="{current}++eq({coloredButtons},1)" x="4%" y="0" width="{areawidth}*0.96" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuActiveTVG_Color"/>
-				<drawimage condition="not{folder}++{coloredElapsed}++{01_seenProgress}" x="42" y="{areaheight}-3" width="{areawidth}*{percentseen}/100" height="{areaheight}/20" imagetype="skinpart" path="elapsedBar" />
-				<drawimage condition="not{folder}++not{coloredElapsed}++{01_seenProgress}" x="42" y="{areaheight}-3" width="{areawidth}*{percentseen}/100" height="{areaheight}/20" imagetype="skinpart" path="elapsedBarMono" />
+				<drawimage condition="not{folder}++{coloredElapsed}++{01_seenProgress}" x="42" y="{areaheight}-3" width="{areawidth}*0.936*{percentseen}/100" height="{areaheight}/20" imagetype="skinpart" path="elapsedBar" />
+				<drawimage condition="not{folder}++not{coloredElapsed}++{01_seenProgress}" x="42" y="{areaheight}-3" width="{areawidth}*0.936*{percentseen}/100" height="{areaheight}/20" imagetype="skinpart" path="elapsedBarMono" />
 			</area>
 			<area condition="not{folder}++{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" x="49%" width="5%" layer="3">
 					<drawtext x="0" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{time}" />
@@ -189,7 +189,7 @@
 				<drawtext x="2%" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{name}"/>
 			</areascroll>
 <!--Detailview-->
-			<area condition="eq({00_numRecordingsmenuitems}, 4)" x="2%" y="14%" width="98%" height="75%" layer="3">
+			<!--<area condition="eq({00_numRecordingsmenuitems}, 4)" x="2%" y="14%" width="98%" height="75%" layer="3">
 				<drawimage condition="not{current}" x="0" y="0" width="95%" height="100%" imagetype="skinpart" path="buttonRootTVG_ver" />
 				<drawimage condition="{current}++eq({coloredButtons}, 0)" x="0" y="0%" width="95%" height="100%" imagetype="skinpart" path="buttonPlexActiveDetail" />
 				<drawimage condition="{current}++eq({coloredButtons}, 1)" x="0" y="0%" width="95%" height="100%" imagetype="skinpart" path="buttonPlexActiveDetailColor" />
@@ -207,12 +207,19 @@
 				<drawtext condition="{folder}++gt({numrecordingsfolder}, 1)" x="18%" y="40%" width="30%" font="{light}" fontsize="16%" color="{clrLightGray}" text="{numrecordingsfolder} {tr(recordings)}" />
 				<drawtext condition="{folder}++newrecordingsfolder" x="18%" y="59%" width="30%" font="{light}" fontsize="16%" color="{clrLightGray}" text="{newrecordingsfolder} {tr(new)}" />
 				
-				<drawrectangle condition="not{folder}++not{current}" x="1%" y="90%" width="{areaheight}*0.8*0.68*{percentseen}/100" height="2%" color="{clrHigh}" />
-				<drawrectangle condition="not{folder}++{current}" x="1%" y="90%" width="{areaheight}*0.8*0.68*{percentseen}/100" height="2%" color="{clrLightGray}" />
+				<drawrectangle condition="not{folder}++not{current}" x="1%" y="90%" width="{areaheight}*0.544*{percentseen}/100" height="2%" color="{clrHigh}" />
+				<drawrectangle condition="not{folder}++{current}" x="1%" y="90%" width="{areaheight}*0.544*{percentseen}/100" height="2%" color="{clrLightGray}" />
 			</area>
 			<area condition="not{folder}" x="71%" y="14%" width="23%" layer="3">
 				<drawtext x="0" y="6%" align="right" font="{light}" fontsize="15%" color="{clrLightGray}" text="{duration}min      {date}      {time}" />
-			</area>
+			</area>-->
+			<!--<area  x="14%" y="14%" width="2%" height="{areawidth}" layer="4">
+				<drawimage x="0" y="7%" width="100%" height="{areawidth}" imagetype="icon" path="iconCutted" />
+			</area>-->
+
+			<!--<area x="93%" y="18%" width="2%" layer="3">
+				<drawtextvertical direction="topdown" font="{light}" fontsize="60%" color="{clrLightGray}" text="cutted" />
+			</area>-->
 			
 		</listelement>
 
