@@ -80,7 +80,7 @@
 	-->
 
 	<viewelement name="message">
-		<area condition="{displaymessage}" x="0" y="91%" width="100%" height="7%" layer="7">
+		<area condition="{displaymessage}" x="0" y="91%" width="100%" height="7%" layer="6">
 			<drawimage x="5%" y="12%" width="{areawidth}*0.9" height="80%" imagetype="skinpart" path="buttonMessageBlue" />
 		</area>
 		<area condition="{displaymessage}" x="0%" y="91%" width="100%" height="7%" layer="7">
