@@ -197,3 +197,7 @@ shady-skin Revision History
 2015-06-06:
 
 - Added detailview for displaymenurecordings
+
+2015-06-10:
+
+- Removed detailview for displaymenurecordings, small fixes
